--- a/_includes/landing-page/01-main-container.html
+++ b/_includes/landing-page/01-main-container.html
@@ -1,10 +1,11 @@
 <div class="banner-wrap">
 <div class="jumbotron" id="main-banner">
   <div class="container">
-    <img src="img/TM_logo_reversed_1c.png" width="250px">
+    <!-- <img src="img/TM_logo_reversed_1c.png" width="250px"> -->
     <h1 class="heading-title" style="color: #fff; font-weight: 700;">Stay your website away from <span style="font-weight: 800; letter-spacing: 0.5px; background: #333; color: #fff; padding: 0% 1%;">ROBOT</span> </h1>
     <br/>
-    <p><a class="btn btn-primary-outline-light btn-lg">Protect my Website</a></p>
+    <p><a class="btn btn-primary-outline-light btn-lg">Watch Demo</a>
+    <a class="btn btn-primary btn-lg">Try it Free</a></p>
   </div>
   <section class="scroll" id="scroll-down">
     <a href="#bot-summary"><span></span></a>
