--- a/_includes/landing-page/04-how.html
+++ b/_includes/landing-page/04-how.html
@@ -19,7 +19,7 @@
 </div>
 <div class="container internship-content" id="part-1">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-6" style="text-align: center;">
 			<img src="img/1.jpg" />
 		</div>
 		<div class="col-md-6" style="margin-top:70px;">
@@ -29,21 +29,21 @@
 		</div>
 	</div>
 </div>
-<div class="container internship-content" id="part-2">
+<div class="container internship-content" id="part-2" >
 	<div class="row">
 		<div class="col-md-6" style="margin-top:70px;">
 			<p class="subtitle-top">Most common Bot IPs</p>
 			<h1 class="display-2"><strong>Bot IP Address Detection</strong></h1>
 			<p class="subtitle">Subhead, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
 		</div>
-		<div class="col-md-6" style="text-align: right;">
+		<div class="col-md-6" style="text-align: center;">
 			<img src="img/2.png"/>
 		</div>
 	</div>
 </div>
 <div class="container internship-content" id="part-3">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-6" style="text-align: center;">
 			<img src="img/3.png" />
 		</div>
 		<div class="col-md-6" style="margin-top:70px;">
