Fixed the navigation

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,10 +12,10 @@
         <div class="navbar-collapse collapse" id="navbar-main" style="padding-top:12px">
           <ul class="nav navbar-nav">
             <li>
-              <a href="./help/">Pricing</a>
+              <a href="#">Pricing</a>
             </li>
             <li>
-              <a href="http://news.bootswatch.com">Contact Us</a>
+              <a href="#">Contact Us</a>
             </li>
           </ul>
 
